Updated Data Overview section

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -4,30 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rubric\n",
-    "\n",
-    "Instructions: DELETE this cell before you submit via a `git push` to your repo before deadline. This cell is for your reference only and is not needed in your report. \n",
-    "\n",
-    "Scoring: Out of 10 points\n",
-    "\n",
-    "- Each Developing  => -2 pts\n",
-    "- Each Unsatisfactory/Missing => -4 pts\n",
-    "  - until the score is \n",
-    "\n",
-    "If students address the detailed feedback in a future checkpoint they will earn these points back\n",
-    "\n",
-    "\n",
-    "|                  | Unsatisfactory                                                                                                                                                                                                    | Developing                                                                                                                                                                                              | Proficient                                     | Excellent                                                                                                                              |\n",
-    "|------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| Data relevance   | Did not have data relevant to their question. Or the datasets don't work together because there is no way to line them up against each other. If there are multiple datasets, most of them have this trouble | Data was only tangentially relevant to the question or a bad proxy for the question. If there are multiple datasets, some of them may be irrelevant or can't be easily combined.                       | All data sources are relevant to the question. | Multiple data sources for each aspect of the project. It's clear how the data supports the needs of the project.                         |\n",
-    "| Data description | Dataset or its cleaning procedures are not described. If there are multiple datasets, most have this trouble                                                                                              | Data was not fully described. If there are multiple datasets, some of them are not fully described                                                                                                      | Data was fully described                       | The details of the data descriptions and perhaps some very basic EDA also make it clear how the data supports the needs of the project. |\n",
-    "| Data wrangling   | Did not obtain data. They did not clean/tidy the data they obtained.  If there are multiple datasets, most have this trouble                                                                                 | Data was partially cleaned or tidied. Perhaps you struggled to verify that the data was clean because they did not present it well. If there are multiple datasets, some have this trouble | The data is cleaned and tidied.                | The data is spotless and they used tools to visualize the data cleanliness and you were convinced at first glance                      |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# COGS 108 - Data Checkpoint"
    ]
   },
@@ -113,24 +89,28 @@
    "source": [
     "### Data overview\n",
     "\n",
-    "Instructions: REPLACE the contents of this cell with descriptions of your actual datasets.\n",
-    "\n",
-    "For each dataset include the following information\n",
     "- Dataset #1\n",
     "  - Dataset Name: Students Social Media Addiction and Academic Impact Dataset\n",
-    "  - Link to the dataset:\n",
+    "  - Link to the dataset: https://www.kaggle.com/datasets/adilshamim8/social-media-addiction-vs-relationships\n",
     "  - Number of observations: 705\n",
     "  - Number of variables: 13\n",
+    "    \n",
     "  - Description of the variables most relevant to this project\n",
-    "  - \n",
+    "      - Avg_Daily_Usage_Hours – Average number of hours per day spent on social media (measured in hours).\n",
+    "      - Addicted_Score – A self-reported addiction score on a 1–10 scale, where higher values indicate stronger signs of social media dependence.\n",
+    "      - Affects_Academic_Performance – A categorical variable (Yes/No) indicating whether the student believes social media negatively impacts their academic performance.\n",
+    "      - Mental_Health_Score – A 1–10 scale measuring perceived mental health, where higher values indicate better mental well-being.\n",
+    "      - Sleep_Hours_Per_Night – Average number of hours slept per night.\n",
+    "      - Conflicts_Over_Social_Media – A numeric measure capturing interpersonal conflict related to social media use.\n",
+    "        \n",
+    "\n",
+    "\n",
     "  - Descriptions of any shortcomings this dataset has with repsect to the project\n",
-    "- Dataset #2 (if you have more than one!)\n",
-    "  - same as above\n",
-    "- etc\n",
-    "\n",
-    "Each dataset deserves either a set of bullet points as above or a few sentences if you prefer that method.\n",
-    "\n",
-    "If you plan to use multiple datasets, add a few sentences about how you plan to combine these datasets."
+    "      - The dataset relies heavily on self-reported measures, which means responses may reflect personal bias or inaccurate self-perception rather than objective reality.\n",
+    "      - The data is cross-sectional and captures only one point in time, so while we can observe relationships between variables, we cannot determine causation.\n",
+    "      - The sample only includes students between the ages of 16 and 25, which limits how well the findings generalize to older adults or non-student populations.\n",
+    "      - If the survey was distributed online or completed voluntarily, it may be affected by self-selection bias, meaning the students who chose to participate may not represent the broader student population.\n",
+    "      - Academic performance is measured based on students’ perceptions rather than objective indicators such as GPA, which may not fully reflect actual academic outcomes."
    ]
   },
   {
