Add contribution details for Shivani Parimi

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -21,7 +21,7 @@
     "- Sana Gupta: – \n",
     "- Daria Stolyarova: Data curation, Analysis, Software, Writing– original draft, Writing – review & editing\n",
     "- Sanmita Babu: \n",
-    "- Shivani Parimi: "
+    "- Shivani Parimi: Data curation and Analysis of Dataset #2"
    ]
   },
   {
