--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -561,8 +561,19 @@
     "Since all metrics are survey-based and self reported, Respondents may underreport usage or overreport positive academic habits due to recall error and social desirability bias. Also, since the dataset appears to draw reponses primarily from Metropolitan University and related academic communities), it may not represent college students globally, which limits how confidently we can generalize findings across regions. Responses are collected at one point in time, which allows us to identify correlations (i.e. associating higher usage with lower productivity) but cannot conclude causation. Many survey items mix numeric and categorical/ordinal responses that require reprocessing and the proper determination of correlation methods for each type of data. Lastly, it is important to consider that other factors such as course load, access to devices/the internet, etc... can influence both usage and outcomes, so there is potential confounding in the dataset. \n",
     "\n",
     "How we will join/align/cross-refernce data from **both** datasets:\n",
-    "\n"
+    "\n",
+    "Although we cannot merge the two datasets row-by-row, we will align them thematically using cross-dataset comparison. Since both datasets measure daily social media usage in hours, self-reported academic impact, and wellbeing indiicators, we can treat the as parallel samples to compare whether the patterns observed in one dataset replicate in the other. Specifically we will map conceptually equivalent variables: Avg_Daily_Usage_Hours (Dataset 1) aligns with time_spent_cleaned (Dataset 2), and Addicted_Score and Affects_Academic_Performance (Dataset 1) align with Social Media Distraction During Academic Activities and the Likert wellbeing scales (Dataset 2). Mental_Health_Score in Dataset 1 corresponds broadly to the combined anxiety, depression, and mood modification scales in Dataset 2. \n",
+    "\n",
+    "Also, Dataset 1 provides a Country variable with global entries (e.g. Bangladesh, India, USA, UK) while \n",
+    "Dataset 2 has data from Urban vs. Rural residences only so we will use Dataset 1 as the primary source for regional comparisons. By running our correlation analyses seperately on each dataset and then comparing effect sizes/directions across both, consistent similar relationships will strengthen the generalizability of our argument. Divergence may also suggest demographic differences between the two samples. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -573,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1049,7 @@
    ],
    "source": [
     "# Check data types\n",
-    "df2_raw.dtypes\n"
+    "df2_raw.dtypes"
    ]
   },
   {
@@ -1048,27 +1059,6 @@
    "source": [
     "## Ethics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -1081,31 +1071,6 @@
     "\n",
     "Collecting information related to screen usage patterns, emotional state, and daily behaviors may reveal sensitive details about individuals' lives, even when identifiers are removed. There is also a concern that data collected for a class project could later be misunderstood or used in ways it wasn't originally intended. To reduce this risk, we will only collect information that is truly necessary, avoid gathering identifying details, and make sure data is stored securely. We will also be clear with participants about why their data is being collected and how it will be used and protected. Our analysis will focus on overall trends and subgroup patterns rather than individual-level behavior, and when presenting findings, we will be careful to explain the limits of the data and avoid making broad or judgmental conclusions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
